2001-10-27 Stefan Petersen (spe@stacken.kth.se)

	* src/*.[ch]: typedef:ed all internal structs to *_t
	

-- Release 0.0.4 --	
	
2001-10-27 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.[hc]: EagleCad generates broken Gerber.
	  I kindly detect and then tries to run as nothing 
	  happened. Disable kludge with commenting out 
	  EAGLECAD_KLUDGE in src/gerber.h.
	  This was pointed out to me by Dan Christian and
	  later confirmed by Fredrik Jonsson sent me some
	  examples. Thanks guys!
	* AUTHORS/CONTRIBUTORS: Added latest bunch of contributing
	  people.
	* configure.in: Updated version to 0.0.4 before release.
	
	
2001-10-24 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.[hc]: Added. Extracted drawing functions from
	  gerbv.c.
	* src/gerbv.c: Removed add drawing functions into draw.c.
	  Also minor clean ups. Fixed #def's of Guile support.
	* src/Makefile.am: Added draw.c as src file.
	
	
2001-10-22 Stefan Petersen (spe@stacken.kth.se)

	* example/*: Cleaned out numpres.pcb.* to a separate dir
	  and added a example received from Joachim Jansen on
	  separate aperture files.

	
2001-10-21 Stefan Petersen (spe@stacken.kth.se)

	* gerbv.c: Changed how cw and ccw is handled when drawing
	  arcs to avoid swapping of start and stop points.
	* gerbv.c: Red dots at "aperture macros wanna-be's" scale
	  with ordinary scale, so they don't disappear when scaling
	  around.

	
2001-10-09 Stefan Petersen (spe@stacken.kth.se)

	* gerber.h, gerber.c: Added 'D' as possible Format
	  Statement after patches from Uwe Bonnes
	  <bon@elektron.ikp.physik.tu-darmstadt.de>. Thanks!
	* scm_gerber.c: Broke out omit_zeros_t to scm type
	  conversion and added 'explicit to this type.

	
2001-09-03 Stefan Petersen (spe@stacken.kth.se)

	* configure.in: fixed bug when testing for opt_backend_dir
	  causing configure to fail at least on Solaris.
	* INSTALL: updated with info now that automake's in use.

	
2001-09-02 Stefan Petersen (spe@stacken.kth.se)
